Remove toc focus; Fix whitespace

--- a/src/main/content/antora_ui/src/sass/nav.scss
+++ b/src/main/content/antora_ui/src/sass/nav.scss
@@ -255,6 +255,10 @@ html.is-clipped--nav {
   font-weight: var(--body-font-weight-bold);
 }
 
+.nav-link:focus, .nav-text:focus {
+  outline: none;
+}
+
 .nav-panel-explore {
   background: var(--nav-background);
   display: flex;
